[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
futures = "0.3.30"
zip = "0.5.11"
mime_guess = "2.0"
lazy_static = "1.4.0"
serde = "1.0.210"
serde_json = "1.0.128"
uuid = { version = "1.3", features = ["v4"] }